--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-803.5KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇳🇱 荷兰-277.3KB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-478.5KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
   - {name: 🇨🇦 加拿大-360.3KB/s(Youtube:不良林), server: ca-trojan.bonds.id, port: 443, type: trojan, password: YWVzLTI1lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272, sni: ca-trojan.bonds.id, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-619.4KB/s(Youtube:不良林), server: ru.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ru.2046.gq, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-599.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-775.5KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-803.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-277.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-478.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-360.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-619.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-599.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-775.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-803.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-277.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-478.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-360.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-619.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-599.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-775.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-803.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-277.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-478.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-360.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-619.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-599.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-775.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-478.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-775.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-803.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-277.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-478.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-360.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-619.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-599.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-775.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-803.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-277.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-478.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-360.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-619.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-599.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-775.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-803.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-277.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-478.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-360.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-619.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-599.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-775.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-803.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-277.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-478.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-360.3KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-619.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-599.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-775.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
