--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,9 +5,9 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-608.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
-  - {name: 🇭🇰 香港-11.89MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
+  - {name: 🇭🇰 香港-11.59MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
   - {name: 🇺🇸 美国-330.6KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -15,18 +15,18 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-608.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-608.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -34,33 +34,33 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-608.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-11.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-608.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-608.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -68,9 +68,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-608.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -87,9 +87,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-608.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
-      - 🇭🇰 香港-11.89MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
