--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
+  - {name: 🇨🇳 中国-476.0KB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
   - {name: 🇭🇰 香港-11.59MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
-  - {name: 🇺🇸 美国-330.6KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-428.8KB/s(Youtube:不良林), server: 43.155.101.188, port: 2292, type: vmess, uuid: 7731d35e-ddf5-47cb-f841-fa7d6e714735, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-659.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -49,29 +53,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -87,10 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-330.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
