--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -7,9 +7,14 @@ external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-476.0KB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
   - {name: 🇭🇰 香港-11.59MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
-  - {name: 🇨🇳 中国-428.8KB/s(Youtube:不良林), server: 43.155.101.188, port: 2292, type: vmess, uuid: 7731d35e-ddf5-47cb-f841-fa7d6e714735, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-428.8KB/s(Youtube:不良林), server: 43.155.101.188, port: 2292, type: vmess, uuid: 7731d35e-ddf5-47cb-f841-fa7d6e714735, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-659.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-534.4KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.75MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-4.17MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-679.9KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.23MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -18,9 +23,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
@@ -28,9 +38,14 @@ proxy-groups:
     proxies:
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -39,9 +54,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -55,9 +75,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
@@ -65,9 +90,14 @@ proxy-groups:
       - 🎯 全球直连
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -76,9 +106,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -96,9 +131,14 @@ proxy-groups:
       - ♻️ 自动选择
       - 🇨🇳 中国-476.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-11.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-964.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
