--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-914.4KB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
-  - {name: 🇨🇦 加拿大-659.1KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.75MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-428.8KB/s(Youtube:不良林), server: 43.155.101.188, port: 2292, type: vmess, uuid: 7731d35e-ddf5-47cb-f841-fa7d6e714735, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-534.4KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-679.9KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.23MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-9.47MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
   - {name: 🇸🇬 新加坡-956.2KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.32MB/s(Youtube:不良林), server: 104.208.84.160, port: 12369, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.23MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.17MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇨🇳 中国-914.4KB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
   - {name: 🇰🇷 韩国-1.89MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-355.1KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: tj-us02.yiyodns.xyz, port: 443, type: trojan, password: 7dafe71e-2be6-302f-bdfc-e6319a3299bc, sni: tj-us02.yiyodns.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-317.6KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-956.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-355.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-956.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-355.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-956.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-355.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-956.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-355.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-956.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-355.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-956.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-355.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-659.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-428.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-534.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-679.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-9.47MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-956.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.32MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-914.4KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-355.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
